[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/card.png" type="Texture" id=1]
[ext_resource path="res://scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://fonts/SF Atarian System.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 48
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )

[node name="Card" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Symbol" type="Sprite" parent="."]

[node name="CostLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -88.0
margin_top = -136.0
margin_bottom = -88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AttackLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -88.0
margin_top = 88.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HealthLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 88.0
margin_right = 88.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

